// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div>
        <Routes
          changeMap={[Function]}
          displaySidebar={[Function]}
          login={[Function]}
          mapType="streets"
          redirect={false}
          stateSidebar={false}
          user={null}
        />
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          false,
          <Routes
            changeMap={[Function]}
            displaySidebar={[Function]}
            login={[Function]}
            mapType="streets"
            redirect={false}
            stateSidebar={false}
            user={null}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "changeMap": [Function],
            "displaySidebar": [Function],
            "login": [Function],
            "mapType": "streets",
            "redirect": false,
            "stateSidebar": false,
            "user": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <Routes
            changeMap={[Function]}
            displaySidebar={[Function]}
            login={[Function]}
            mapType="streets"
            redirect={false}
            stateSidebar={false}
            user={null}
          />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            false,
            <Routes
              changeMap={[Function]}
              displaySidebar={[Function]}
              login={[Function]}
              mapType="streets"
              redirect={false}
              stateSidebar={false}
              user={null}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          null,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "changeMap": [Function],
              "displaySidebar": [Function],
              "login": [Function],
              "mapType": "streets",
              "redirect": false,
              "stateSidebar": false,
              "user": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`App should match snapshot when displaySidebar is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div>
        <Connect(NavBar)
          logout={[Function]}
        />
        <Routes
          changeMap={[Function]}
          displaySidebar={[Function]}
          login={[Function]}
          mapType="streets"
          redirect={false}
          stateSidebar={true}
          user={null}
        />
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <Connect(NavBar)
            logout={[Function]}
          />,
          <Routes
            changeMap={[Function]}
            displaySidebar={[Function]}
            login={[Function]}
            mapType="streets"
            redirect={false}
            stateSidebar={true}
            user={null}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "logout": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "changeMap": [Function],
            "displaySidebar": [Function],
            "login": [Function],
            "mapType": "streets",
            "redirect": false,
            "stateSidebar": true,
            "user": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <Connect(NavBar)
            logout={[Function]}
          />
          <Routes
            changeMap={[Function]}
            displaySidebar={[Function]}
            login={[Function]}
            mapType="streets"
            redirect={false}
            stateSidebar={true}
            user={null}
          />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <Connect(NavBar)
              logout={[Function]}
            />,
            <Routes
              changeMap={[Function]}
              displaySidebar={[Function]}
              login={[Function]}
              mapType="streets"
              redirect={false}
              stateSidebar={true}
              user={null}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "logout": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "changeMap": [Function],
              "displaySidebar": [Function],
              "login": [Function],
              "mapType": "streets",
              "redirect": false,
              "stateSidebar": true,
              "user": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`App should match snapshot when user is logged in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div>
        <div>
          <div
            className="toggle-map-style"
          >
            <button
              className="streets-button"
              onClick={[Function]}
            />
          </div>
          <i
            className="fas fa-bars streets"
            onClick={[Function]}
          />
        </div>
        <Routes
          changeMap={[Function]}
          displaySidebar={[Function]}
          login={[Function]}
          mapType="streets"
          redirect={false}
          stateSidebar={false}
          user={
            Object {
              "name": "paul",
            }
          }
        />
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <div
              className="toggle-map-style"
            >
              <button
                className="streets-button"
                onClick={[Function]}
              />
            </div>
            <i
              className="fas fa-bars streets"
              onClick={[Function]}
            />
          </div>,
          false,
          <Routes
            changeMap={[Function]}
            displaySidebar={[Function]}
            login={[Function]}
            mapType="streets"
            redirect={false}
            stateSidebar={false}
            user={
              Object {
                "name": "paul",
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="toggle-map-style"
              >
                <button
                  className="streets-button"
                  onClick={[Function]}
                />
              </div>,
              <i
                className="fas fa-bars streets"
                onClick={[Function]}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="streets-button"
                  onClick={[Function]}
                />,
                "className": "toggle-map-style",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "streets-button",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-bars streets",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
          ],
          "type": "div",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "changeMap": [Function],
            "displaySidebar": [Function],
            "login": [Function],
            "mapType": "streets",
            "redirect": false,
            "stateSidebar": false,
            "user": Object {
              "name": "paul",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div>
          <div>
            <div
              className="toggle-map-style"
            >
              <button
                className="streets-button"
                onClick={[Function]}
              />
            </div>
            <i
              className="fas fa-bars streets"
              onClick={[Function]}
            />
          </div>
          <Routes
            changeMap={[Function]}
            displaySidebar={[Function]}
            login={[Function]}
            mapType="streets"
            redirect={false}
            stateSidebar={false}
            user={
              Object {
                "name": "paul",
              }
            }
          />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <div
                className="toggle-map-style"
              >
                <button
                  className="streets-button"
                  onClick={[Function]}
                />
              </div>
              <i
                className="fas fa-bars streets"
                onClick={[Function]}
              />
            </div>,
            false,
            <Routes
              changeMap={[Function]}
              displaySidebar={[Function]}
              login={[Function]}
              mapType="streets"
              redirect={false}
              stateSidebar={false}
              user={
                Object {
                  "name": "paul",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="toggle-map-style"
                >
                  <button
                    className="streets-button"
                    onClick={[Function]}
                  />
                </div>,
                <i
                  className="fas fa-bars streets"
                  onClick={[Function]}
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <button
                    className="streets-button"
                    onClick={[Function]}
                  />,
                  "className": "toggle-map-style",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "streets-button",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "button",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-bars streets",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
            ],
            "type": "div",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "changeMap": [Function],
              "displaySidebar": [Function],
              "login": [Function],
              "mapType": "streets",
              "redirect": false,
              "stateSidebar": false,
              "user": Object {
                "name": "paul",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
